// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render Heading with color 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(222,47%,11%,0.32);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 1.125rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  font-variation-settings: 'opsz' 60;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    data-klear360-component="heading"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with default properties 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(216,56%,2%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 1.125rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  font-variation-settings: 'opsz' 60;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    data-klear360-component="heading"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with mixed color 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(216,56%,2%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 1.125rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  font-variation-settings: 'opsz' 60;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c1.c1.c1.c1.c1 {
  color: hsla(195,100%,22%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 1.125rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  font-variation-settings: 'opsz' 60;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    data-klear360-component="heading"
  >
    Supercharge your business with the all‑powerful
     
    <span
      class="c1"
      data-klear360-component="heading"
    >
      Payment Gateway
    </span>
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with size "large" 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(215,25%,27%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 1.5rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  font-variation-settings: 'opsz' 60;
  line-height: 2rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <h4
    class="c0"
    data-klear360-component="heading"
  >
    Get Started With Payment Gateway
  </h4>
</div>
`;

exports[`<Heading /> should render Heading with size "medium" 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(215,25%,27%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 1.25rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  font-variation-settings: 'opsz' 60;
  line-height: 1.625rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <h5
    class="c0"
    data-klear360-component="heading"
  >
    Get Started With Payment Gateway
  </h5>
</div>
`;

exports[`<Heading /> should render Heading with size "small" 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(216,56%,2%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 1.125rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  font-variation-settings: 'opsz' 60;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    data-klear360-component="heading"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;

exports[`<Heading /> should render Heading with size "small" and contrast "high" 1`] = `
.c0.c0.c0.c0.c0 {
  color: hsla(216,56%,2%,1);
  font-family: "Inter","Roboto","Inter Fallback Arial",Arial;
  font-size: 1.125rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  font-variation-settings: 'opsz' 60;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <h6
    class="c0"
    data-klear360-component="heading"
  >
    Get Started With Payment Gateway
  </h6>
</div>
`;
